--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/Abdulrahman88-c/simple-rule-validation-API.git"
   },
-  "author": "",
+  "author": "Habeeb Olamilekan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Abdulrahman88-c/simple-rule-validation-API/issues"
