add description in package json file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rule-validation-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "simple rule validation API",
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1"
